--- a/app/public/index.html
+++ b/app/public/index.html
@@ -11,7 +11,7 @@
     <main class="container">
       <div style="text-align: center; margin-bottom: 20px">
         <img
-          src="your-logo-here.jpeg"
+          src="otca-logo.png"
           alt="OpenTelemetry Certified Associate Logo"
           style="max-width: 150px; height: auto"
         />
